# ECL_wavelet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.json  bm_pwm.sh  ci.sh  generate_random_text.cpp  plot_benchmarks.py  profile.sh  profile_access.sh  profile_rank.sh  profile_rank_select_construction.sh  profile_select.sh  profile_wavelet_tree_construction.sh  test.py
benchmark/: CMakeLists.txt  benchmark_access.cu  benchmark_access_NVBIO.cu  benchmark_access_SDSL.cu  benchmark_access_SDSL_from_data.cpp  benchmark_access_SDSL_from_data.cu  benchmark_access_from_data.cu  benchmark_hist_computation.cu  benchmark_queries.cu  benchmark_queries_sdsl.cpp  benchmark_rank.cu  benchmark_rank_SDSL.cu  benchmark_rank_SDSL_from_data.cpp  benchmark_rank_from_data.cu  benchmark_rank_select_construction.cu  benchmark_rank_select_structure.cu  benchmark_rank_select_structure_PASTA.cpp  benchmark_select.cu  benchmark_select_SDSL.cu  benchmark_select_SDSL_from_data.cpp  benchmark_select_from_data.cu  benchmark_tree_construction.cu  benchmark_tree_construction_NVBIO.cu  benchmark_tree_construction_SDSL.cu  benchmark_tree_construction_from_data.cu  plot_RS_benchmarks.py  plot_access_bm.py  plot_access_study.py  plot_benchmarks.py  plot_hist_comp.py  plot_rank_bm.py  plot_rank_shmem_study.py  profile_access.cu  profile_rank.cu  profile_rank_select_construction.cu  profile_select.cu  profile_tree_construction.cu
benchmark/data/: download_data.sh
benchmark/results/: RS_benchmarks_Bulach_PASTA.json  access_shmem_study.json  access_shmem_study_denver.json  access_study.json  benchmark_RS_512_16384_3090.json  benchmark_RS_512_16384_A100.json  benchmark_RS_A100_512_4096.json  benchmark_rank_select_construction.json  benchmarks_RS_pasta.json  bm_access.json  bm_access_no_tune.json  bm_access_tuned_no_threads_sigma_16.json  bm_hist_comp.txt  bm_hist_computation.json  bm_rank.json  bm_select.json  rank_shmem_study.json
bitarray/: CMakeLists.txt
bitarray/benchmark/: CMakeLists.txt  benchmark_rank_select_construction.cu  profile_rank_select_construction.cu
bitarray/include/: bit_array.cuh  rank_select.cuh  utils.cuh
bitarray/src/: bit_array.cu  rank_select.cu
bitarray/tests/: CMakeLists.txt  test_bit_array.cu  test_rank_select.cu  test_utils.cu
example/: CMakeLists.txt  example.cu
include/ecl_wavelet/: CMakeLists.txt
include/ecl_wavelet/bitarray/: bit_array.cuh  rank_select.cuh
include/ecl_wavelet/tree/: wavelet_tree.cuh
include/ecl_wavelet/utils/: test_benchmark_utils.cuh  utils.cuh
kernel_tuning/: CMakeLists.txt  apply_tunes.py  check_tuned_GPUs.py  plot_kernel_tunes.py  tune_kernels.cu  tune_kernels.sh
kernel_tuning/FLK/: FLK.csv  FLK_shmem.csv  FLK_shmem_per_thread.csv
kernel_tuning/access/: accessKernel.csv  plot.py  plot_access_study.py
kernel_tuning/hist/: hist.csv
kernel_tuning/rank/: plot.py  rank.csv
misc/: ballot_sync_test.cu  n_bit_pos_test.cpp  sdsl_test.cpp
src/: CMakeLists.txt
src/bitarray/: bit_array.cu  rank_select.cu
src/utils/: GPU_tunes.hpp  test_benchmark_utils.cu  utils.cu
tests/: CMakeLists.txt  test_bit_array.cu  test_rank_select.cu  test_utils.cu  test_wavelet_tree.cu
tree/: CMakeLists.txt
tree/include/: wavelet_tree.cuh
tree/src/: wavelet_tree.cu
tree/tests/: CMakeLists.txt  test_wavelet_tree.cu
utils/: CMakeLists.txt
utils/include/: test_benchmark_utils.cuh  utils.cuh
utils/src/: GPU_tunes.hpp  test_benchmark_utils.cu  utils.cu
